--- a/SMSSDK/.settings/org.eclipse.core.resources.prefs
+++ b/SMSSDK/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/cn/smssdk/gui/RegisterPage.java=UTF-8
 encoding//src/cn/smssdk/gui/layout/TitleLayout.java=UTF-8
